examples/bad/ERROR_UNEXPECTED_FIELD_ACCESS/simple_field_access.st
language core;
extend with #records;

fn main(n : Nat) -> Nat {
  return { fst = 0, snd = true }.thd
}

//ERROR_UNEXPECTED_FIELD_ACCESS
